<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/textViewStyleActivityMain"
        android:gravity="center"
        android:text="@string/text_view_activity_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/buttonUsualToastShort"
        android:text="@string/button_usual_toast"
        android:onClick="onClickMainActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        style="@style/AppTheme.Button"/>

    <Button
        android:id="@+id/buttonUsualToastLong"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:onClick="onClickMainActivity"
        android:gravity="center"
        android:text="@string/button_usual_toast_long"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUsualToastShort"
        app:layout_constraintVertical_bias="0.0"
        style="@style/AppTheme"/>

    <Button
        android:id="@+id/buttonCenterToast"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onClickMainActivity"
        android:text="@string/button_center_toast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUsualToastLong"
        app:layout_constraintVertical_bias="0.0"
        style="@style/AppTheme"/>

    <Button
        android:id="@+id/buttonWithPictureToast"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/button_toast_with_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:onClick="onClickMainActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCenterToast"
        app:layout_constraintVertical_bias="0.0"
        style="@style/AppTheme"/>

    <Button
        android:id="@+id/buttonWithPictureToastTransparent"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/button_toast_with_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:onClick="onClickMainActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonWithPictureToast"
        app:layout_constraintVertical_bias="0.0"
        style="@style/AppTheme"/>

    <Button
        android:id="@+id/buttonOwnToast"
        android:layout_width="200sp"
        style="@style/AppTheme"
        android:layout_height="wrap_content"
        android:text="@string/button_toast_with_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:onClick="onClickMainActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonWithPictureToastTransparent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>